--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   var app = new Vue({
     el:'#app',
     data:{
-      product:'Bot',
+      product:'Salıncak',
       description : "bu bir deneme yazisidir"
     },
   })
